--- a/HomeCloud/index.html
+++ b/HomeCloud/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+        crossorigin="anonymous">
+
+    <link rel="stylesheet" href="index.css">
+
+    <title>HomeCloud</title>
 </head>
+
 <body>
-    <form action="/submit-student-data" method="post">
-        First Name: <input name="firstName" type="text" /> <br />
-        Last Name: <input name="lastName" type="text" /> <br />
-        <input type="submit" />
-    </form>
+
+    <div class="container title">
+
+        <h1><u>Home Cloud Beta</u></h1>
+
+
+
+        <div class="container ">
+
+
+            <form action="/User-Name-Data" method="post">
+
+                First Name: <input name="firstName" type="text" /> <br />
+
+                Last Name: <input name="lastName" type="text" /> <br />
+
+                <input type="submit" />
+            </form>
+
+        </div>
+
+    </div>
+
+
 </body>
-</html>
 
 </html>
